--- a/app/src/main/res/layout/layout_widget_white_simple.xml
+++ b/app/src/main/res/layout/layout_widget_white_simple.xml
@@ -1,30 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/parentView"
     android:orientation="vertical"
-    android:background="#fff"
+    android:background="@drawable/preview"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/titleTextView"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:textColor="#000"
-        android:padding="10dp"
-        android:layout_gravity="right"
-        android:background="#f0fff0"
-        android:text="Change the Text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/linear"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/titleTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:background="#0FFFFFFF"
+            android:padding="10dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:text="@string/name"
+            android:textColor="#FFFFFF"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            tools:ignore="RtlHardcoded" />
+    </LinearLayout>
 
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:divider="#f0f0f0"
-        tools:listitem="@layout/list_item_widget"
-        android:dividerHeight="1dp"/>
+        android:dividerHeight="1dp"
+        tools:listitem="@layout/list_item_widget" />
 
 </LinearLayout>
