--- a/app/src/main/res/layout/list_item_widget.xml
+++ b/app/src/main/res/layout/list_item_widget.xml
@@ -1,11 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/parentView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="5dp">
+
+
+    <ImageButton
+        android:id="@+id/done"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center|left"
+        android:background="@android:drawable/list_selector_background"
+        android:paddingEnd="5dp"
+        android:src="@drawable/ic_circle"
+        tools:ignore="RtlHardcoded,RtlSymmetry" />
 
     <LinearLayout
         android:layout_width="218dp"
@@ -31,17 +43,17 @@
     </LinearLayout>
 
     <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
+        android:id="@+id/reminder"
+        android:layout_width="31dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_weight="1"
         android:src="@drawable/ic_calendar" />
 
     <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
+        android:id="@+id/checklist"
+        android:layout_width="31dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_weight="1"
         android:src="@drawable/ic_checklist_" />
