--- a/app/src/main/res/xml/widgetinfo.xml
+++ b/app/src/main/res/xml/widgetinfo.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:minWidth="125dp"
-    android:minHeight="125dp"
     android:minResizeHeight="40dp"
     android:minResizeWidth="40dp"
-    android:updatePeriodMillis="1800000"
+    android:updatePeriodMillis="1"
+    android:minHeight="?attr/dropdownListPreferredItemHeight"
     android:previewImage="@mipmap/ic_launcher"
     android:initialLayout="@layout/activity_main"
     android:resizeMode="horizontal|vertical"
-    android:widgetCategory="home_screen">
+    android:widgetCategory="home_screen"
+    tools:ignore="PrivateResource">
 </appwidget-provider>
